Added region config
Region no longer locked to US

--- a/config.json
+++ b/config.json
@@ -5,7 +5,8 @@
         "alpr": {
             "engine": "phantom",
             "guesses": 5,
-            "license_plate_format": [""]
+            "license_plate_format": [""],
+			"region": "eu"
         },
         "alerts": {
             "alerts_ignore_validation": true,
